--- a/roles/collect/tasks/main.yml
+++ b/roles/collect/tasks/main.yml
@@ -8,10 +8,13 @@
     delay: 1
   remote_user: root
 
-- name: Execute lldptool command and store output
-  command: lldptool -t -n -i ens15f1
+- name: Execute lldptool
+  lldptool: port=ens15f1
   register: lldp_output
   remote_user: root
 
 - name: Display lldp_output
-  debug: msg="{{ lldp_output.stdout.split('\n') }}"
+  debug: msg="{{ lldp_output }}"
+
+- name: Display json output
+  debug: msg="{{ lldp_output.json }}"
