updated schema per feedback, added neighbor IP, improved JSON formatting

--- a/collect.yml
+++ b/collect.yml
@@ -1,5 +1,8 @@
 ---
 - hosts: computes
   remote_user: root
+  vars:
+    output_dir: /home/caso/reports/
+    interface_regex: en
   roles:
     - collect
