--- a/roles/get-computes/tasks/main.yml
+++ b/roles/get-computes/tasks/main.yml
@@ -1,16 +1,7 @@
 ---
 - name: Run nova command on {{ inventory_hostname }}
   shell: nova hypervisor-list
-  environment:
-    OS_NO_CACHE: True
-    COMPUTE_API_VERSION: 1.1
-    OS_USERNAME: admin
-    no_proxy: ",10.0.0.4"
-    OS_TENANT_NAME: admin
-    OS_CLOUDNAME: overcloud
-    OS_AUTH_URL: http://10.0.0.4:5000/v2.0
-    NOVA_VERSION: 1.1
-    OS_PASSWORD: admin
+  environment: "{{ osc_env }}"
   register: hlist
   remote_user: root
 
