--- a/user_vars.yml
+++ b/user_vars.yml
@@ -3,3 +3,4 @@
   output_dir: /tmp/topo-coll/reports
   output_file_prefix: topo_report
   interface_regex: en
+  osc_env: { "OS_NO_CACHE": "True", "COMPUTE_API_VERSION": "1.1", "OS_USERNAME": "admin", "no_proxy": ",10.0.0.4", "OS_TENANT_NAME": "admin", "OS_CLOUDNAME": "overcloud", "OS_AUTH_URL": "http://10.0.0.4:5000/v2.0", "NOVA_VERSION": "1.1", "OS_PASSWORD": "admin" }
