--- a/roles/get-computes/tasks/main.yml
+++ b/roles/get-computes/tasks/main.yml
@@ -1,12 +1,36 @@
 ---
-- name: Run nova command on {{ inventory_hostname }}
+- name: Run nova hypervisor-list
   shell: nova hypervisor-list
   environment: "{{ osc_env }}"
-  register: hlist
+  register: nova_hlist
   remote_user: root
 
 - name: Print hypervisor list when verbosity >= 1, otherwise skip
-  debug: msg="{{ hlist }}" verbosity=1
+  debug: msg="{{ nova_hlist }}" verbosity=1
+
+- name: Create local variable with pruned hypervisor list
+  set_fact: hyper_list="{{ nova_hlist.stdout|hypervisor_hostnames }}"
+
+- name: Print pruned hypervisor list when verbosity >= 1, otherwise skip
+  debug: msg="{{ hyper_list }}" verbosity=1
+
+- name: Run nova hypervisor-show
+  shell: nova hypervisor-show {{ item }}
+  environment: "{{ osc_env }}"
+  register: nova_hlist_show
+  with_items: "{{ hyper_list }}"
+  remote_user: root
+
+- name: Create local variable with hypervisor names
+  set_fact: hyper_names="{{ item.stdout|hypervisor_names }}"
+  with_items: "{{ nova_hlist_show.results }}"
+  register: hyper_names_results
+
+- name: Create a list of hypervisor names
+  set_fact: hyper_names_list="{{ hyper_names_results.results | map(attribute='ansible_facts.hyper_names') | list }}"
+
+- name: Print hypervisor name list when verbosity >= 1, otherwise skip
+  debug: msg="{{ hyper_names_list }}" verbosity=1
 
 - name: Write to compute_hosts file
   template: src=compute_hosts.j2 dest=./compute_hosts
