major cleanup and update of README

--- a/get_hypervisors.yml
+++ b/get_hypervisors.yml
@@ -1,6 +1,6 @@
 ---
-- hosts: localhost
+- hosts: controllers
   gather_facts: no
   vars_files: ["user_vars.yml"]
   roles:
-    - clean-tmp
+    - get-hypervisors
