OPENSTACK-1899: Add more restricted dependency check
Change-Id: I47b6dc644ee7291e554a89dc2da9111929e5e873

--- a/debian/control
+++ b/debian/control
@@ -8,5 +8,5 @@ Homepage: http://nuagenetworks.net/
 
 Package: nuage-topology-collector
 Architecture: all
-Depends: ansible (>= 2.1.0), ${misc:Depends}
+Pre-Depends: ansible (>= 2.1.0), ${misc:Depends}
 Description: collects Neighbor LLDP connectivity and VF port PCI information
