Disable wrapping doing nova hypervisor-show
Disable wrapping in the shell cmd of the get-hypervisors role
to avoid clipping of the host names.

Change-Id: I1630af5ec2a90b478d944672d5e17154735fa40a
Closes-Bug: OPENSTACK-1966

--- a/nuage-topology-collector/roles/get-hypervisors/tasks/main.yml
+++ b/nuage-topology-collector/roles/get-hypervisors/tasks/main.yml
@@ -29,7 +29,7 @@
   debug: msg="{{ hyper_list }}" verbosity=1
 
 - name: Run nova hypervisor-show
-  shell: nova hypervisor-show {{ item }}
+  shell: nova hypervisor-show --wrap 0 {{ item }}
   environment: "{{ osc_env }}"
   register: nova_hlist_show
   with_items: "{{ hyper_list }}"
