Fixing DCIP+Nuage integration bugs.
Closes-Bug: OPENSTACK-1963, OPENSTACK-1965, OPENSTACK-1989
Change-Id: I75477ea6d530bcd0c98dd6dba08ffcdeaa0d8a57

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
-*.log
-*.swp
-*.retry
-*.bak
+AUTHORS
+build/*
+build-stamp
+ChangeLog
+cover/
+covhtml/
+dist/
+doc/build
+*.orig
+*.DS_Store
 *.pyc
+pbr*.egg/
+setuptools*.egg/
+*.log
+*.mo
+*.sw?
 *~
+/.*
+!/.coveragerc
+!/.gitignore
+!/.gitreview
+!/.mailmap
+!/.pylintrc
+!/.testr.conf
