--- a/nuage-topology-collector/topology.yml
+++ b/nuage-topology-collector/topology.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: hypervisors
-  remote_user: root
+  remote_user: "{{ remote_usr }}"
   vars_files: ["user_vars.yml"]
   roles:
     - topology
