Automation for topology collector
Adding unit test
Restructing of files and RPM build
Updated Readme

Closes-Bug: PROD-9129, OPENSTACK-2275, OPENSTACK-2316
Change-Id: Idf272749c1f32eff52bc155b67de90fc7e80361c

--- a/nuage_topology_collector/user_vars.yml
+++ b/nuage_topology_collector/user_vars.yml
@@ -6,4 +6,5 @@
   output_dir: /tmp/topo-coll/reports
   output_file_prefix: topo_report
   interface_regex: en
-  remote_usr: root
+  remote_usr: heat-admin
+  osc_env_file: /home/stack/overcloudrc
