--- a/nuage_topology_collector/user_vars.yml
+++ b/nuage_topology_collector/user_vars.yml
@@ -5,6 +5,7 @@
   temp_dir: /tmp/topo-coll/tmp/
   output_dir: /tmp/topo-coll/reports
   output_file_prefix: topo_report
-  interface_regex: en
+  interface_regex: en  # change to '' for matching all the interfaces
   remote_usr: heat-admin
   osc_env_file: /home/stack/overcloudrc
+  undercloud_env_file : /home/stack/stackrc
