Support python2/3 compatibility
Change-Id: I9efbbf20bf283a3fbafde4deaebf4aaa7a599e55

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -3,7 +3,9 @@
       jobs:
         - openstack-tox-pep8
         - openstack-tox-py27
+        - openstack-tox-py36
     gate:
       jobs:
         - openstack-tox-pep8
         - openstack-tox-py27
+        - openstack-tox-py36
