--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 1.6
-envlist = py27,pep8
+envlist = py36,py35,py27,pep8
 skipsdist = True
 
 [testenv]
@@ -19,6 +19,14 @@ commands = flake8
 install_command = pip install -U {opts} {packages}
 commands = nosetests -v {posargs}
 
+[testenv:py35]
+install_command = pip3 install -U {opts} {packages}
+commands = nosetests -v {posargs}
+
+[testenv:py36]
+install_command = pip3 install -U {opts} {packages}
+commands = nosetests -v {posargs}
+
 [testenv:venv]
 install_command = pip install -U {opts} {packages}
 commands = {posargs}
@@ -27,7 +35,7 @@ commands = {posargs}
 # "E123 closing bracket does not match indentation of opening bracket's line"
 ignore = E123
 show-source = True
-exclude = .git,.venv,.tox,dist,doc,*egg,*.yml
+exclude = .git,.venv,.tox,dist,doc,*egg,*.yml,*.pyc
 include=*.py
 # enable-extensions is ignored in this OpenStack flavor
 
