Support python2/3 compatibility
Change-Id: I9efbbf20bf283a3fbafde4deaebf4aaa7a599e55
(cherry picked from commit d32d7db998473dc7fca34ad3ddebf08a8f407729)

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,14 @@ commands = nosetests -v {posargs}
 install_command = pip3 install -U {opts} {packages}
 commands = nosetests -v {posargs}
 
+[testenv:py35]
+install_command = pip3 install -U {opts} {packages}
+commands = nosetests -v {posargs}
+
+[testenv:py36]
+install_command = pip3 install -U {opts} {packages}
+commands = nosetests -v {posargs}
+
 [testenv:venv]
 install_command = pip install -U {opts} {packages}
 commands = {posargs}
@@ -31,7 +39,7 @@ commands = {posargs}
 # "E123 closing bracket does not match indentation of opening bracket's line"
 ignore = E123
 show-source = True
-exclude = .git,.venv,.tox,dist,doc,*egg,*.yml
+exclude = .git,.venv,.tox,dist,doc,*egg,*.yml,*.pyc
 include=*.py
 # enable-extensions is ignored in this OpenStack flavor
 
