--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 1.6
-envlist = py36,py35,py27,pep8
+envlist = py3,py27,pep8
 skipsdist = True
 
 [testenv]
@@ -19,11 +19,7 @@ commands = flake8
 install_command = pip install -U {opts} {packages}
 commands = nosetests -v {posargs}
 
-[testenv:py35]
-install_command = pip3 install -U {opts} {packages}
-commands = nosetests -v {posargs}
-
-[testenv:py36]
+[testenv:py3]
 install_command = pip3 install -U {opts} {packages}
 commands = nosetests -v {posargs}
 
