--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 1.6
-envlist = py27,pep8
+envlist = py3,py27,pep8
 skipsdist = True
 
 [testenv]
@@ -17,6 +17,10 @@ commands = flake8
 
 [testenv:py27]
 install_command = pip install -U {opts} {packages}
+commands = nosetests -v {posargs}
+
+[testenv:py3]
+install_command = pip3 install -U {opts} {packages}
 commands = nosetests -v {posargs}
 
 [testenv:venv]
