Skip configure lldpad in role for dpdk interfaces
LLDP configuration on DPDK interfaces fails. This
interrumpts the collection of topology information
on these interface in advanced mode

Change-Id: I391c0f131dbe99d9c3558abd4c4aea5c164bd507

--- a/nuage_topology_collector/roles/topology/tasks/main.yml
+++ b/nuage_topology_collector/roles/topology/tasks/main.yml
@@ -54,6 +54,9 @@
   become: true
   command: lldptool set-lldp -i {{ item }}  adminStatus=rx
   with_items: "{{ interface_list }}"
+  when:
+    - "'dpdk' not in item"
+    - not ovs_advanced_mode|default(False)
 
 - name: Execute topology collector
   topology:
