Use custom defined dict2items filter plugin
Cbis 19 is on ansibe 2.5 which does not have dic2items|items2dict
filter plaugins. Until everyone move to a recent version of ansible
code will use custom defined filter plugins.

Closes-Bug: OPENSTACK-2935
Change-Id: Ib1ac9c4a707bc84ab76f5ef1ecf90ce9cea9ad4f

--- a/nuage_topology_collector/roles/topology/tasks/main.yml
+++ b/nuage_topology_collector/roles/topology/tasks/main.yml
@@ -22,7 +22,7 @@
 
     - name: Set ovs_topology fact when bridgeinfo succeeded
       set_fact:
-        ovs_topology: "{{ brinfo.brinfo | dict2items | selectattr('key', 'match', interface_regex)  | list | items_to_dict }}"
+        ovs_topology: "{{ brinfo.brinfo | dict_to_items | selectattr('key', 'match', interface_regex)  | list | items_to_dict }}"
       when: not brinfo.failed
 
     - name: Set ovs_topology fact when bridgeinfo failed
