TC performance/scale improvements - incr I
This patchset ensures irrelevant host/interfaces are
excluded from lldp information collection.
Additionally, inventory is not written to file anymore.

Change-Id: Idd2c96984e5712608f7fecef3112c68e0bcd745c
Partial-Bug: PROD-10832

--- a/nuage_topology_collector/get_topo.yml
+++ b/nuage_topology_collector/get_topo.yml
@@ -1,19 +1,32 @@
 ---
-- name: Run the whole thing
+- name: Prepare execution
   hosts: localhost
   gather_facts: no
   remote_user: "{{ remote_usr }}"
   vars_files: ["user_vars.yml"]
-
   tasks:
-  - name: Clean up tmp files from previous runs
-    file: path="{{ temp_dir }}" state=absent
+    - name: Clean up tmp files from previous runs
+      file:
+        path: "{{ temp_dir }}"
+        state: absent
 
-  - name: Make sure tmp dir exists
-    file: path="{{ temp_dir }}" state=directory
+    - name: Make sure tmp dir exists
+      file:
+        path: "{{ temp_dir }}"
+        state: directory
 
-- name: Run topology playbook
-  import_playbook: topology.yml
+    - name: Build inventory
+      include_role:
+        name: tc-inventory
+
+- name: Run topology collection
+  hosts: all
+  gather_facts: no
+  remote_user: "{{ remote_usr }}"
+  vars_files: ["user_vars.yml"]
+  roles:
+    - topology
 
 - name: Run report playbook
   import_playbook: report.yml
+
